--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.41",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "tailwindcss": "^3.4.10"
   }
 }
