--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@primevue/themes": "^4.0.4",
     "core-js": "^3.8.3",
+    "element-plus": "^2.8.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "tailwindcss-primeui": "^0.3.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
